feat: implement comprehensive UltraDaycare breeding system with egg mechanics, incense, and admin commands